添加数据缓存（加入SQLLite）

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DrySister</string>
+    <string name="defaultUrl">http://imgsrc.baidu.com/forum/pic/item/bbbf252dd42a28345165055255b5c9ea17cebf8a.jpg</string>
 </resources>
