--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">DrySister</string>
     <string name="defaultUrl">http://imgsrc.baidu.com/forum/pic/item/bbbf252dd42a28345165055255b5c9ea17cebf8a.jpg</string>
+    <string name="btn_front">上一个</string>
+    <string name="btn_next">下一个</string>
 </resources>
